09-ingress/backend-apps.yaml
# --- Frontend App ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: hashicorp/http-echo:alpine
          args: ["-text=<h1>Welcome to Frontend</h1>"]
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 5678
---
# --- API App ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: hashicorp/http-echo:alpine
          args: ["-text={\"status\":\"ok\",\"service\":\"api\"}"]
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 5678
---
# --- Admin App ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: hashicorp/http-echo:alpine
          args: ["-text=<h1>Admin Panel<h1>"]
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: admin-svc
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 5678
